I corrected the contrast error previously returned by the accessibility report.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -57,7 +57,7 @@ li {
 }
 
 #red {
-    color: red;
+    color: rgb(139, 0, 0);
 }
 
 /*this is the css for page 2*/
